crates/fe/tests/fixtures/cli_output/single_files/parse_error.snap
---
source: crates/fe/tests/cli_output.rs
assertion_line: 553
expression: output
input_file: tests/fixtures/cli_output/single_files/parse_error.fe
---
=== STDERR ===
errors in file://<project>/crates/fe/tests/fixtures/cli_output/single_files/parse_error.fe

error[1-0001]: expected expression
  ┌─ parse_error.fe:3:12
  │
3 │     let y = // Missing value
  │            ^ expected expression

error[8-0031]: type annotation is needed
  ┌─ parse_error.fe:2:9
  │
2 │     let x = 5
  │         ^
  │         │
  │         type annotation is needed
  │         no default type is provided for an integer type. consider giving integer type

error[8-0031]: type annotation is needed
  ┌─ parse_error.fe:3:9
  │
3 │     let y = // Missing value
  │         ^
  │         │
  │         type annotation is needed
  │         consider giving `: Type` here


=== EXIT CODE: 1 ===
